[package]
name = "asciicam"
version = "0.1.0"
edition = "2021"
authors = ["Vilhelm Bergsøe <vilhelmbergsoe@gmail.com>"]

[dependencies]
image = "0.23.14"
termion = "1.5.6"
chrono = "0.4.22"

[target.'cfg(unix)'.dependencies]
nokhwa = { version = "0.9.4", features = ["input-v4l"] }

[target.'cfg(windows)'.dependencies]
nokhwa = { version = "0.9.4", features = ["input-msmf"] }

[target.'cfg(macos)'.dependencies]
nokhwa = { version = "0.9.4", features = ["input-avfoundation"] }
